Bug 340598 - Reports are printed (and exported to PDF) in screen resolution
Summary: Reports are printed (and exported to PDF) in screen resolution
Status: CLOSED FIXED
Alias: None
Product: KEXI
Classification: Applications
Component: Reports and Printouts (other bugs)
Version First Reported In: 2.9 Alpha
Platform: unspecified All
: NOR normal
Target Milestone: 2.8.7
Assignee: Adam Pigg
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-11-03 10:52 UTC by Jarosław Staniek
Modified: 2014-12-01 21:08 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.8.7
Sentry Crash Report:


Attachments
Proposed solution: use QPrinter(QPrinter::HighResolution) (947 bytes, patch)
2014-11-03 10:58 UTC, Jarosław Staniek
Details
Exported PDF: images are tiny when the resolution is set to high as the proposed patch sets. (24.39 KB, image/png)
2014-11-03 11:04 UTC, Jarosław Staniek
Details
Expected size of images (24.23 KB, image/png)
2014-11-03 11:07 UTC, Jarosław Staniek
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Jarosław Staniek 2014-11-03 10:52:16 UTC
Reports are printed (and exported to PDF) in screen resolution. High resolution should be used.


Reproducible: Always

Steps to Reproduce:
To reproduce, just create a report with image element, set data and export to PDF or print (can be to PDF too). Resulting printout is of screen resolution, what defeats the idea of printing images.
Comment 1 Jarosław Staniek 2014-11-03 10:58:09 UTC
Created attachment 89417 [details]
Proposed solution: use QPrinter(QPrinter::HighResolution)

QPrinter(QPrinter::HighResolution) can be used BUT more work is needed: QPrinter::resolution() is affected by the PrinterMode but resolution() isn't currently used for drawing of the pages.
Comment 2 Jarosław Staniek 2014-11-03 11:04:45 UTC
Created attachment 89418 [details]
Exported PDF: images are tiny when the resolution is set to high as the proposed patch sets.
Comment 3 Jarosław Staniek 2014-11-03 11:07:26 UTC
Created attachment 89419 [details]
Expected size of images
Comment 4 Adam Pigg 2014-11-30 21:03:55 UTC
See https://git.reviewboard.kde.org/r/121281/
Comment 5 Adam Pigg 2014-12-01 18:29:22 UTC
Git commit 00cb92b159db2173b6a8842916cb8458819d3249 by Adam Pigg.
Committed on 01/12/2014 at 18:27.
Pushed by piggz into branch 'master'.

Print report in HighDPI

REVIEW:121281

Squashed commit of the following:

commit 505c65d9ba93d23535a0a0dee9d3da1aefc13237
Author: Adam Pigg <adam@piggz.co.uk>
Date:   Sun Nov 30 19:57:50 2014 +0000

    Addressed review comments

commit bc9a04024916309b6109fe6450fc01246218a269
Author: Adam Pigg <adam@piggz.co.uk>
Date:   Fri Nov 28 19:47:16 2014 +0000

    When printing reports use High DPI

M  +1    -1    kexi/plugins/reports/kexireportview.cpp
M  +12   -5    libs/koreport/renderer/KoReportPrintRenderer.cpp

http://commits.kde.org/calligra/00cb92b159db2173b6a8842916cb8458819d3249
Comment 6 Jarosław Staniek 2014-12-01 20:58:21 UTC
Git commit a1df54154950764e82de07922f6b488730301c62 by Jaroslaw Staniek, on behalf of Adam Pigg.
Committed on 01/12/2014 at 18:27.
Pushed by staniek into branch 'calligra/2.8'.

Print report in HighDPI

REVIEW:121281
FIXED-IN:2.8.7

Squashed commit of the following:

commit 505c65d9ba93d23535a0a0dee9d3da1aefc13237
Author: Adam Pigg <adam@piggz.co.uk>
Date:   Sun Nov 30 19:57:50 2014 +0000

    Addressed review comments

commit bc9a04024916309b6109fe6450fc01246218a269
Author: Adam Pigg <adam@piggz.co.uk>
Date:   Fri Nov 28 19:47:16 2014 +0000

    When printing reports use High DPI

M  +1    -1    kexi/plugins/reports/kexireportview.cpp
M  +12   -7    libs/koreport/renderer/KoReportPrintRenderer.cpp

http://commits.kde.org/calligra/a1df54154950764e82de07922f6b488730301c62