Print report in HighDPI

REVIEW:121281
BUG:340598
FIXED-IN:2.8.7

Squashed commit of the following:

commit 505c65d9ba93d23535a0a0dee9d3da1aefc13237
Author: Adam Pigg <adam@piggz.co.uk>
Date:   Sun Nov 30 19:57:50 2014 +0000

    Addressed review comments

commit bc9a04024916309b6109fe6450fc01246218a269
Author: Adam Pigg <adam@piggz.co.uk>
Date:   Fri Nov 28 19:47:16 2014 +0000

    When printing reports use High DPI